# MeTTa-KG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mork  LICENSE  README.md  Rocket.toml  docker-compose.yml  package-lock.json  package.json
.github/: pr-template.yml
.github/workflows/: docker-publish.yml  pre-pr.yml
api/: Cargo.toml  Dockerfile  Rocket.toml  diesel.toml  setup.sh
api/migrations/2024-08-07-004012_create_tables/: down.sql  up.sql
api/migrations/2024-08-13-154617_seed/: down.sql  up.sql
api/migrations/2024-10-04-155153_cascade_token_deletes/: down.sql  up.sql
api/migrations/2024-11-01-092911_create_space_table/: down.sql  up.sql
api/src/: db.rs  lib.rs  main.rs  model.rs  mork_api.rs  schema.rs
api/src/routes/: mod.rs  namespaces.rs  sessions.rs  spaces.rs  tokens.rs  translations.rs  upload.rs
api/tests/: mod.rs  test_clear.rs  test_composition.rs  test_explore.rs  test_export.rs  test_import.rs  test_read.rs  test_transform.rs  test_upload.rs
api/tests/integrations/: common.rs  mod.rs  test_clear.rs  test_explore.rs  test_export.rs  test_import.rs  test_read.rs  test_transform.rs  test_upload.rs
frontend/: .prettierignore  .prettierrc.json  eslint.config.mjs  eslint.config.mts  index.html  metta.grammar  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.mts  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: App.module.scss  App.tsx  Common.module.scss  Editor.module.scss  Editor.tsx  Tokens.module.scss  Tokens.tsx  app.css  index.tsx  mettaLanguageSupport.ts  types.d.ts  types.ts  urls.ts
translations/: README.md  requirements.txt
translations/examples/: DF_API_to_MeTTa.py  DF_api_playground.py  data_comment_votes.metta  data_comments.metta  data_milestones.metta  data_pools.metta  data_proposals.metta  data_rounds.metta  data_users.metta  mock_data_multiple_versions.metta  queries_data_snippets.metta  queries_data_transform.metta  queries_data_transform.py  queries_difference_community_expert_reviews.metta  queries_get_newest_data.metta  queries_more_down_than_upvotes.metta  queries_proposals_per_user.metta  queries_user_with_most_awarded_proposals.metta  transformed_comment_votes.metta  transformed_comment_votes2.metta  transformed_comments.metta  transformed_users.metta
translations/metta_queries/: contexts_person.metta  multiple_contexts.metta  multiple_contexts_querries.metta  playground.metta
translations/src/: csv_to_metta.py  csv_to_metta_run.py  jena_filter_regex.sparql  n3_to_metta.py  (+11 more)
(+158 files in other folders)
