[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.2", features = ["sqlite", "postgres", "chrono"] }
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
rocket_cors = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
mork-frontend = { git = "https://github.com/trueagi-io/MORK.git", branch = "zipper_head" }
mork-bytestring = { git = "https://github.com/trueagi-io/MORK.git", branch = "zipper_head" }
pathmap = { git = "ssh://git@github.com/Adam-Vandervorst/PathMap.git", branch = "zipper_head" }

[patch.'https://github.com/trueagi-io/MORK.git']
pathmap = { git = "ssh://Adam-Vandervorst@github.com/Adam-Vandervorst/PathMap.git", branch = "zipper_head" }
